# Friends-Analysis

./: .dockerignore  .gitignore  Dockerfile  FriendsModels(G+V).ipynb  README.md  project.ipynb  pyproject.toml
service/: ds_graph.py  functions_for_analisys.py  functions_for_vk_groups.py  functions_for_vk_users.py  main.py  myGraph.gpickle  vk_graph_dml.py
tests/: test.py
