[tool.poetry]
name = "graph_service"
version = "0.0.1"
description = ""
authors = ["Sakhnevich Kirill kirsr.life@gmail.com"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10.13"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
click = "8.1.3"
DAWG-Python = "0.7.2"
docopt = "0.6.2"
emoji = "2.1.0"
funcy = "1.17"
future = "0.18.2"
gensim = "4.2.0"
idna = "3.4"
Jinja2 = "3.1.2"
joblib = "1.2.0"
MarkupSafe = "2.1.1"
nltk = "3.7"
numexpr = "2.8.3"
numpy = "1.23.3"
pandas = "1.5.0"
pyLDAvis = "3.3.1"
pymorphy2 = "0.9.1"
pymorphy2-dicts-ru = "2.4.417127.4579844"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
pytz = "2022.4"
regex = "2022.9.13"
requests = "2.28.1"
scikit-learn = "1.1.2"
sklearn = "0.0"
scipy = "1.9.2"
six = "1.16.0"
smart-open = "6.2.0"
threadpoolctl = "3.1.0"
tqdm = "4.64.1"
urllib3 = "1.26.12"
vk-api = "11.9.9"
networkx = "2.8.8"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
igraph = "^0.11.3"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
mypy = "^1.6.1"
isort = "^5.12.0"
bandit = "^1.7.5"
flake8 = "^6.1.0"
pylint = "^3.0.2"
ipykernel = "^6.26.0"
black = "^23.11.0"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310"]


[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"


[tool.poetry.scripts]
vk_graph_dml = "graph_service.service.vk_graph_dml:start"